spacing issue fix

--- a/wp-content/themes/healthkart/assets/scss/_single.scss
+++ b/wp-content/themes/healthkart/assets/scss/_single.scss
@@ -45,8 +45,13 @@
 		}
 		.entry-title{
 			font-size: 33px;
+			line-height: 39px;
 			font-weight: bold;
 			margin-top: 10px;
+			@media (max-width: 767px){
+				font-size: 24px;
+				line-height: 30px;
+			}
 		}
 		h2{
 			font-size: 26px;
